--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -105,6 +105,8 @@
         <activity
             android:name=".Activity.LecturaPipaActivity"
             android:label="@string/Pipa" />
+        <activity android:name=".Activity.LecturaAlmacenActivity"
+            android:label="@string/Almacen"/>
     </application>
 
 </manifest>
