--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -236,6 +236,67 @@
     <Compile Include="Models\Seguridad\RespuestaDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CatalogoRespuestaDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CentroCostoCrearDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CentroCostoDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CentroCostoEliminarDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CentroCostoModificarDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CuentaContableCrearDto.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CuentaContableDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CuentaContableEliminarDto.cs" />
+    <Compile Include="Views\Catalogos\Modelo\CuentaContableModificarDto.cs" />
+    <Compile Include="Views\Catalogos\Modelo\EmpDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\ProveedorCrearDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\ProveedorDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\ProveedorEliminarDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\ProveedorModificarDTO.cs" />
+    <Compile Include="Views\Catalogos\Modelo\TipoCentroCostoEnum.cs" />
+    <Compile Include="Views\Catalogos\Servico\CentroCostoServicio.cs" />
+    <Compile Include="Views\Catalogos\Servico\CuentaContableServicio.cs" />
+    <Compile Include="Views\Catalogos\Servico\EmpresaServicio.cs" />
+    <Compile Include="Views\Catalogos\Servico\EmpresaSvo.cs" />
+    <Compile Include="Views\Catalogos\Servico\ProveedorServicio.cs" />
+    <Compile Include="Views\Inventario\Modelo\AlmacenEntradaCrearDTO.cs" />
+    <Compile Include="Views\Inventario\Servicio\AlmacenServicio.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\ComprasDto.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\enumIEPS.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\enumIVA.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraAutorizacionDTO.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraCancelar.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraCrearDTO.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraDTO.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraEstatusDTO.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraEstatusEnum.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraProductoCrearDTO.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraRespuestaDTO.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\ProdcutoOC.cs" />
+    <Compile Include="Views\OrdenCompra\Modelo\RequisicionOCDTO.cs" />
+    <Compile Include="Views\OrdenCompra\Servicio\OrdenCompraServicio.cs" />
+    <Compile Include="Views\Requsicion\Modelo\ProductoDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequicisionProductoGridDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionAutorizacion.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionAutPutDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionCancelaDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionCrearDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionRevisionDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionRevPutDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionEDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDtos\RequisicionProdAutPutDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDtos\RequisicionProdReviPutDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDtos\RequisicionProductoAutorizacionDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDtos\RequisicionProductoRevisionDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoEDTO.cs" />
+    <Compile Include="Views\Requsicion\Modelo\RequisiconEstatus.cs" />
+    <Compile Include="Views\Requsicion\Modelo\UsuarioDTO.cs" />
+    <Compile Include="Views\Requsicion\Servicio\RequisicionServicio.cs" />
+    <Compile Include="Views\Seguridad\Modelo\AutenticacionDTO.cs" />
+    <Compile Include="Views\Seguridad\Modelo\EmpresaDTO.cs" />
+    <Compile Include="Views\Seguridad\Modelo\RespuestaAutenticacionDto.cs" />
+    <Compile Include="Views\Seguridad\Modelo\RespuestaDto.cs" />
+    <Compile Include="Views\Seguridad\Servicio\AutenticacionServicio.cs" />
+    <Compile Include="Views\Seguridad\Servicio\TokenServicio.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\bundles\chartscripts.bundle.js" />
