--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -3946,6 +3946,8 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\DashBoard.cshtml" />
+    <Content Include="Views\Home\Inicio.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\Seguridad\" />
