JOTM -05/09/2018 Pantalla inicial de lectura camioneta
Pantalla inicial de lectura camioneta

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -105,8 +105,11 @@
         <activity
             android:name=".Activity.LecturaPipaActivity"
             android:label="@string/Pipa" />
-        <activity android:name=".Activity.LecturaAlmacenActivity"
-            android:label="@string/Almacen"/>
+        <activity
+            android:name=".Activity.LecturaAlmacenActivity"
+            android:label="@string/Almacen" />
+        <activity android:name=".Activity.LecturaCamionetaActivity"
+            android:label="@string/Camioneta"/>
     </application>
 
 </manifest>
