--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -215,6 +215,9 @@
   <ItemGroup>
     <Compile Include="Agente\AgenteServicio.cs" />
     <Compile Include="App_Code\AutenticacionServicio.cs" />
+    <Content Include="App_Code\OrdenCompraServicio.cs" />
+    <Content Include="App_Code\RequisicionServicio.cs" />
+    <Content Include="App_Code\CatalogoServicio.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -223,80 +226,26 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\Shared\MainController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Catalogos\EmpresasDTO.cs" />
+    <Compile Include="Models\Catalogos\ProveedorDTO.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\OrdenCompra\OrdenCompraDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionesModel.cs" />
+    <Compile Include="Models\Requisicion\RequisicionEstatusDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionModel.cs" />
     <Compile Include="Models\Seguridad\AutenticacionDTO.cs" />
     <Compile Include="Models\Seguridad\LoginModel.cs" />
     <Compile Include="Models\Seguridad\RespuestaAutenticacionDto.cs" />
     <Compile Include="Models\Seguridad\RespuestaDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CatalogoRespuestaDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CentroCostoCrearDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CentroCostoDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CentroCostoEliminarDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CentroCostoModificarDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CuentaContableCrearDto.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CuentaContableDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CuentaContableEliminarDto.cs" />
-    <Compile Include="Views\Catalogos\Modelo\CuentaContableModificarDto.cs" />
-    <Compile Include="Views\Catalogos\Modelo\EmpDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\ProveedorCrearDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\ProveedorDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\ProveedorEliminarDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\ProveedorModificarDTO.cs" />
-    <Compile Include="Views\Catalogos\Modelo\TipoCentroCostoEnum.cs" />
-    <Compile Include="Views\Catalogos\Servico\CentroCostoServicio.cs" />
-    <Compile Include="Views\Catalogos\Servico\CuentaContableServicio.cs" />
-    <Compile Include="Views\Catalogos\Servico\EmpresaServicio.cs" />
-    <Compile Include="Views\Catalogos\Servico\EmpresaSvo.cs" />
-    <Compile Include="Views\Catalogos\Servico\ProveedorServicio.cs" />
-    <Compile Include="Views\Inventario\Modelo\AlmacenEntradaCrearDTO.cs" />
-    <Compile Include="Views\Inventario\Servicio\AlmacenServicio.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\ComprasDto.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\enumIEPS.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\enumIVA.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraAutorizacionDTO.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraCancelar.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraCrearDTO.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraDTO.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraEstatusDTO.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraEstatusEnum.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraProductoCrearDTO.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\OrdenCompraRespuestaDTO.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\ProdcutoOC.cs" />
-    <Compile Include="Views\OrdenCompra\Modelo\RequisicionOCDTO.cs" />
-    <Compile Include="Views\OrdenCompra\Servicio\OrdenCompraServicio.cs" />
-    <Compile Include="Views\Requsicion\Modelo\ProductoDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequicisionProductoGridDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionAutorizacion.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionAutPutDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionCancelaDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionCrearDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionRevisionDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionDtos\RequisicionRevPutDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionEDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDtos\RequisicionProdAutPutDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDtos\RequisicionProdReviPutDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDtos\RequisicionProductoAutorizacionDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoDtos\RequisicionProductoRevisionDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisicionProductoEDTO.cs" />
-    <Compile Include="Views\Requsicion\Modelo\RequisiconEstatus.cs" />
-    <Compile Include="Views\Requsicion\Modelo\UsuarioDTO.cs" />
-    <Compile Include="Views\Requsicion\Servicio\RequisicionServicio.cs" />
-    <Compile Include="Views\Seguridad\Modelo\AutenticacionDTO.cs" />
-    <Compile Include="Views\Seguridad\Modelo\EmpresaDTO.cs" />
-    <Compile Include="Views\Seguridad\Modelo\RespuestaAutenticacionDto.cs" />
-    <Compile Include="Views\Seguridad\Modelo\RespuestaDto.cs" />
-    <Compile Include="Views\Seguridad\Servicio\AutenticacionServicio.cs" />
-    <Compile Include="Views\Seguridad\Servicio\TokenServicio.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\bundles\chartscripts.bundle.js" />
@@ -4009,9 +3958,17 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\DashBoard.cshtml" />
     <Content Include="Views\Home\Inicio.cshtml" />
+    <Content Include="Views\Requisicion\Requisiciones.cshtml" />
+    <Content Include="Views\Requisicion\Requisicion.cshtml" />
+    <Content Include="Views\OrdenCompra\Ordenes.cshtml" />
+    <Content Include="Views\OrdenCompra\OrdenCompra.cshtml" />
+    <Content Include="Views\Catalogos\CentroCosto.cshtml" />
+    <Content Include="Views\Catalogos\CuentaContable.cshtml" />
+    <Content Include="Views\Catalogos\Proveedor.cshtml" />
+    <Content Include="Views\Catalogos\Empresa.cshtml" />
+    <Content Include="Views\Catalogos\NuevaEmpresa.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Code\Seguridad\" />
     <Folder Include="App_Data\" />
     <Folder Include="assets\plugins\bootstrap-select\Respaldo\css\" />
     <Folder Include="assets\plugins\bootstrap-select\Respaldo\js\i18n\" />
