JOTM-06/09/2018 Agrega registro de inicial y final de camionetas
Agrega vista para el registro inicial y final de camionetas
Agrega modelos DTO necesario para camionetas
Agrega creación de tabla en local para inicio y fin de camionetas
Crea método para envió a api
Crea método para registrar en base de datos local
Queda pendiente conectar el método de registro en local con el de llamada de api rest

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -108,7 +108,13 @@
         <activity
             android:name=".Activity.LecturaAlmacenActivity"
             android:label="@string/Almacen" />
-        <activity android:name=".Activity.LecturaCamionetaActivity"
+        <activity
+            android:name=".Activity.LecturaCamionetaActivity"
+            android:label="@string/Camioneta" />
+        <activity
+            android:name=".Activity.ConfiguracionCamionetaActivity"
+            android:label="@string/Camioneta" />
+        <activity android:name=".Activity.EnviarDartosActivity"
             android:label="@string/Camioneta"/>
     </application>
 
