--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -85,6 +85,10 @@
       <HintPath>..\..\..\..\packages\Microsoft.Owin.Host.SystemWeb.3.1.0\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -169,9 +173,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\..\..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -215,9 +216,10 @@
   <ItemGroup>
     <Compile Include="Agente\AgenteServicio.cs" />
     <Compile Include="App_Code\AutenticacionServicio.cs" />
-    <Content Include="App_Code\OrdenCompraServicio.cs" />
-    <Content Include="App_Code\RequisicionServicio.cs" />
-    <Content Include="App_Code\CatalogoServicio.cs" />
+    <Compile Include="App_Code\OrdenCompraServicio.cs" />
+    <Compile Include="App_Code\RequisicionServicio.cs" />
+    <Compile Include="App_Code\CatalogoServicio.cs" />
+    <Compile Include="App_Code\TokenServicio.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -226,13 +228,17 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\RequisicionController.cs" />
     <Compile Include="Controllers\Shared\MainController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Catalogos\CentroCostoDTO.cs" />
     <Compile Include="Models\Catalogos\EmpresasDTO.cs" />
+    <Compile Include="Models\Catalogos\ProductoDTO.cs" />
     <Compile Include="Models\Catalogos\ProveedorDTO.cs" />
+    <Compile Include="Models\Catalogos\UsuarioDTO.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\OrdenCompra\OrdenCompraDTO.cs" />
@@ -240,6 +246,8 @@
     <Compile Include="Models\Requisicion\RequisicionesModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionEstatusDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionModel.cs" />
+    <Compile Include="Models\Requisicion\RequisicionProductoDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionProductoNuevoDTO.cs" />
     <Compile Include="Models\Seguridad\AutenticacionDTO.cs" />
     <Compile Include="Models\Seguridad\LoginModel.cs" />
     <Compile Include="Models\Seguridad\RespuestaAutenticacionDto.cs" />
@@ -3694,6 +3702,13 @@
     <Content Include="assets\plugins\waitme\waitMe.min.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\ui-icons_444444_256x240.png" />
+    <Content Include="Content\images\ui-icons_555555_256x240.png" />
+    <Content Include="Content\images\ui-icons_777620_256x240.png" />
+    <Content Include="Content\images\ui-icons_777777_256x240.png" />
+    <Content Include="Content\images\ui-icons_cc0000_256x240.png" />
+    <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Content\jquery-ui.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -3911,9 +3926,11 @@
     <Content Include="assets\scss\ui-kit\_typography.scss" />
     <Content Include="assets\scss\ui-kit\_variables.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\DatePickerReady.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -3967,6 +3984,8 @@
     <Content Include="Views\Catalogos\Proveedor.cshtml" />
     <Content Include="Views\Catalogos\Empresa.cshtml" />
     <Content Include="Views\Catalogos\NuevaEmpresa.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -3983,6 +4002,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\1.5Infrastructure\1.5.2Cross Cutting\1.5.2.4Exceptions\Exceptions.MainModule\Exceptions.MainModule.csproj">
+      <Project>{FB4086F4-8177-4175-BEB6-312FD528ABA2}</Project>
+      <Name>Exceptions.MainModule</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\1.5Infrastructure\1.5.2Cross Cutting\1.5.2.5Security\Security.MainModule\Security.MainModule.csproj">
       <Project>{F3BA487D-6FF4-4793-8BBA-79DA05447EC2}</Project>
       <Name>Security.MainModule</Name>
