--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -22,7 +22,32 @@
     <!--Login-->
     <!--Catalogos-->
     <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
+    <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
+    <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
+
+    <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
+    <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
+    <add key="PutModificaCentroCosto" value="api/catalogos/modifica/centro/costo" />
+    <add key="PutEliminaCentroCosto" value="api/catalogos/elimina/centro/costo" />
+    <add key="GetCentroCosto" value="api/catalogos/centro/costo/" />
+    <add key="GetListaProductos" value="api/catalogos/productos/listaproductos/" />
+
+    <add key="PostRegistraCuentaContable" value="api/catalogos/registra/cuenta/contable" />
+    <add key="PutModificaCuentaContable" value="api/catalogos/modifica/cuenta/contable" />
+    <add key="PutEliminaCuentaContable" value="api/catalogos/elimina/cuenta/contable" />
+    <add key="GetListaCuentasContables" value="api/catalogos/consulta/cuentas/contables/" />
+    <add key="GetCuentaContable" value="api/catalogos/consulta/cuenta/contable/" />
     <!--Catalogos-->
+    <!--Requisicion-->
+    <add key="GetRequisicionEstatus" value="api/requisicion/buscar/requisicion/estatus" />
+    <add key="PostRequisicion" value="api/requisicion/guardar/requisicion" />
+    <add key="GetRequisicionesByIdEmpresa" value="api/requisicion/buscar/requisiciones/" />
+    <add key="GetRequisicionByNumRequisicion" value="api/requisicion/buscar/requisicion/" />
+    <add key="GetRequisicionByNumRequisicionAut" value="api/requisicion/buscar/requisicion/autorizacion/" />
+    <add key="PutActulizarRevision" value="api/requisicion/update/requisicion/revision" />
+    <add key="PutActulizarAutorizacion" value="api/requisicion/update/requisicion/autorizacion" />
+    <add key="PutCancelarRequisicion" value="api/requisicion/cancela/requisicion" />
+    <!--Requisicion-->
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -66,7 +91,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
