--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -62,6 +62,14 @@
     <Compile Include="DTOs\Almacen\AlmacenCrearEntradaDTO.cs" />
     <Compile Include="DTOs\Almacen\AlmacenEntradaDTO.cs" />
     <Compile Include="DTOs\Almacen\AlmacenDTO.cs" />
+    <Compile Include="DTOs\Catalogo\CategoriaProductoCrearDto.cs" />
+    <Compile Include="DTOs\Catalogo\CategoriaProductoDto.cs" />
+    <Compile Include="DTOs\Catalogo\CategoriaProductoEliminarDto.cs" />
+    <Compile Include="DTOs\Catalogo\CategoriaProductoModificarDto.cs" />
+    <Compile Include="DTOs\Catalogo\LineaProductoCrearDto.cs" />
+    <Compile Include="DTOs\Catalogo\LineaProductoDto.cs" />
+    <Compile Include="DTOs\Catalogo\LineaProductoEliminarDto.cs" />
+    <Compile Include="DTOs\Catalogo\LineaProductoModificarDto.cs" />
     <Compile Include="DTOs\Catalogo\TipoCentroCostoEnum.cs" />
     <Compile Include="DTOs\Compras\OrdenCompraAutorizacionDTO.cs" />
     <Compile Include="AdaptadoresDTO\CorreoAdapter.cs" />
