KSH-07/09/2018 Catálogo de productos, primera compilación
El catalogo de Unidades de medida, categoría productos, línea de productos y productos estan compilando sin problemas.

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -70,7 +70,14 @@
     <Compile Include="DTOs\Catalogo\LineaProductoDto.cs" />
     <Compile Include="DTOs\Catalogo\LineaProductoEliminarDto.cs" />
     <Compile Include="DTOs\Catalogo\LineaProductoModificarDto.cs" />
+    <Compile Include="DTOs\Catalogo\ProductoCrearDto.cs" />
+    <Compile Include="DTOs\Catalogo\ProductoEliminarDto.cs" />
+    <Compile Include="DTOs\Catalogo\ProductoModificarDto.cs" />
     <Compile Include="DTOs\Catalogo\TipoCentroCostoEnum.cs" />
+    <Compile Include="DTOs\Catalogo\UnidadMedidaCrearDto.cs" />
+    <Compile Include="DTOs\Catalogo\UnidadMedidaDto.cs" />
+    <Compile Include="DTOs\Catalogo\UnidadMedidaEliminarDto.cs" />
+    <Compile Include="DTOs\Catalogo\UnidadMedidaModificarDto.cs" />
     <Compile Include="DTOs\Compras\OrdenCompraAutorizacionDTO.cs" />
     <Compile Include="AdaptadoresDTO\CorreoAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\AlmacenAdapter.cs" />
