--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -242,12 +242,25 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\OrdenCompra\OrdenCompraDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionAutorizacion.cs" />
+    <Compile Include="Models\Requisicion\RequisicionAutPutDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionCancelaDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionEDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionesModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionEstatusDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionEstatusEnum.cs" />
     <Compile Include="Models\Requisicion\RequisicionModel.cs" />
+    <Compile Include="Models\Requisicion\RequisicionProdAutPutDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionProdReviPutDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionProductoAutorizacionDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionProductoEDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionProductoRevisionDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionProductoDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionProductoNuevoDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionRevisionDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionRevPutDTO.cs" />
+    <Compile Include="Models\Requisicion\RespuestaRequisicionDTO.cs" />
     <Compile Include="Models\Seguridad\AutenticacionDTO.cs" />
     <Compile Include="Models\Seguridad\LoginModel.cs" />
     <Compile Include="Models\Seguridad\RespuestaAutenticacionDto.cs" />
