--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <uses-feature
         android:name="android.hardware.camera.any"
@@ -114,8 +116,15 @@
         <activity
             android:name=".Activity.ConfiguracionCamionetaActivity"
             android:label="@string/Camioneta" />
-        <activity android:name=".Activity.EnviarDartosActivity"
-            android:label="@string/Camioneta"/>
+        <activity
+            android:name=".Activity.EnviarDartosActivity"
+            android:label="@string/Camioneta" />
+        <activity
+            android:name=".Activity.ReporteActivity"
+            android:label="@string/Reporte" />
+        <activity android:name=".Activity.VerReporteActivity"
+            android:label="@string/Reporte"
+        />
     </application>
 
 </manifest>
