KSH-10/09/2018 Se agrega al edmx la entidad cliente
Se modifica el edmx para que los valores predeterminados se respeten.

--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -109,13 +109,13 @@
     <Compile Include="Entidades\CategoriaProducto.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entidades\CCliente.cs">
-      <DependentUpon>Sagas.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entidades\CClienteLocacion.cs">
-      <DependentUpon>Sagas.tt</DependentUpon>
-    </Compile>
     <Compile Include="Entidades\CentroCosto.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\Cliente.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\ClienteLocacion.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
     <Compile Include="Entidades\CuentaContable.cs">
@@ -237,6 +237,7 @@
     <Content Include="Entidades\Sagas.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Sagas1.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
