--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -118,7 +118,6 @@
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Http, Version=5.2.6.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.6\lib\net45\System.Web.Http.dll</HintPath>
@@ -249,12 +248,12 @@
     <Compile Include="Models\Catalogos\UsuarioDTO.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\OrdenCompra\OrdenCompraDTO.cs" />
-    <Compile Include="Models\OrdenCompra\OrdenCompraEstatusDTO.cs" />
-    <Compile Include="Models\OrdenCompra\OrdenCompraEstatusEnum.cs" />
-    <Compile Include="Models\OrdenCompra\OrdenCompraModel.cs" />
-    <Compile Include="Models\OrdenCompra\OrdenCompraPorductoDTO.cs" />
-    <Compile Include="Models\OrdenCompra\OrdenesCompraModel.cs" />
+    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraDTO.cs" />
+    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraEstatusDTO.cs" />
+    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraEstatusEnum.cs" />
+    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraModel.cs" />
+    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraPorductoDTO.cs" />
+    <Compile Include="Models\Requisicion\OrdenCompra\OrdenesCompraModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutPutDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionCancelaDTO.cs" />
@@ -272,6 +271,7 @@
     <Compile Include="Models\Requisicion\RequisicionProductoDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionProductoNuevoDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionRevisionDTO.cs" />
+    <Compile Include="Models\Requisicion\RequisicionRevisionModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionRevPutDTO.cs" />
     <Compile Include="Models\Requisicion\RespuestaRequisicionDTO.cs" />
     <Compile Include="Models\Seguridad\AutenticacionDTO.cs" />
@@ -4014,6 +4014,10 @@
     <Content Include="Views\Empresas\Nueva.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
+    <Content Include="Views\Requisicion\RequisicionRevision.cshtml" />
+    <Content Include="Views\Requisicion\RequisicionAutorizacion.cshtml" />
+    <Content Include="Views\OrdenCompra\OrdenCompraAutorizacion.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\RequisicionProductoRevisionDTO.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
