JOTM - 12/09/2018 Guarda cambios Recarga
Guarda pantalla de recarga camioneta
Crea clase utilería de impresión

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -122,9 +122,12 @@
         <activity
             android:name=".Activity.ReporteActivity"
             android:label="@string/Reporte" />
-        <activity android:name=".Activity.VerReporteActivity"
-            android:label="@string/Reporte"
-        />
+        <activity
+            android:name=".Activity.VerReporteActivity"
+            android:label="@string/Reporte" />
+        <activity android:name=".Activity.RecargaCamionetaActivity"
+            android:label="@string/Recarga_camioneta"
+            />
     </application>
 
 </manifest>
