JOTM 13/09/2018 Modifica menu y inicia servicio de recarga
Modifica menu para recarga de camioneta
Agrega servicio de recarga

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -81,8 +81,7 @@
     <add key="AppRecargaEstacionCarbFinal" value="Recarga - Gas|Estación Cab. (Final)|ic_ordenes_compra"/>
     <add key="AppRecargaPipaInicial" value="Recarga - Gas|Pipa (Inicial)|ic_ordenes_compra"/>
     <add key="AppRecargaPipaFinal" value="Recarga - Gas|Pipa (Final)|ic_ordenes_compra"/>
-    <add key="AppRecargaCamionetaCilindroInicial" value="Recarga - Gas|Camioneta (Inicial)|ic_ordenes_compra"/>
-    <add key="AppRecargaCamionetaCilindroFinal" value="Recarga - Gas|Camioneta (Final)|ic_ordenes_compra"/>
+    <add key="AppRecargaCamionetaCilindro" value="Recarga - Gas|Camioneta |ic_ordenes_compra"/>
     <add key="AppTraspasoEstacionCarbInicial" value="Traspaso - Gas|Estación Carb. (Inicial)|ic_ordenes_compra"/>
     <add key="AppTraspasoEstacionCarbFinal" value="Traspaso - Gas|Estación Carb. (Final)|ic_ordenes_compra"/>
     <add key="AppTraspasoPipaInicial" value="Traspaso - Gas|Pipa (Inicial)|ic_ordenes_compra"/>
