--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -217,7 +217,6 @@
     <Compile Include="Agente\AgenteServicio.cs" />
     <Compile Include="App_Code\AutenticacionServicio.cs" />
     <Compile Include="App_Code\OrdenCompraServicio.cs" />
-    <Content Include="App_Code\OrdenesComprasModel.cs" />
     <Compile Include="App_Code\RequisicionServicio.cs" />
     <Compile Include="App_Code\CatalogoServicio.cs" />
     <Compile Include="App_Code\TokenServicio.cs" />
@@ -238,6 +237,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Catalogos\CatalogoRespuestaDTO.cs" />
+    <Compile Include="Models\Catalogos\CuentaContableDTO.cs" />
     <Compile Include="Models\Catalogos\Empresa.cs" />
     <Compile Include="Models\Catalogos\EmpresaModel.cs" />
     <Compile Include="Models\Catalogos\CentroCostoDTO.cs" />
@@ -248,12 +248,14 @@
     <Compile Include="Models\Catalogos\UsuarioDTO.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraDTO.cs" />
-    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraEstatusDTO.cs" />
-    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraEstatusEnum.cs" />
-    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraModel.cs" />
-    <Compile Include="Models\Requisicion\OrdenCompra\OrdenCompraPorductoDTO.cs" />
-    <Compile Include="Models\Requisicion\OrdenCompra\OrdenesCompraModel.cs" />
+    <Compile Include="Models\OrdenCompra\OrdenCompraDTO.cs" />
+    <Compile Include="Models\OrdenCompra\OrdenCompraEstatusDTO.cs" />
+    <Compile Include="Models\OrdenCompra\OrdenCompraEstatusEnum.cs" />
+    <Compile Include="Models\OrdenCompra\OrdenCompraModel.cs" />
+    <Compile Include="Models\OrdenCompra\OrdenCompraProductoDTO.cs" />
+    <Compile Include="Models\OrdenCompra\OrdenesCompraModel.cs" />
+    <Compile Include="Models\OrdenCompra\ProductoOCDTO.cs" />
+    <Compile Include="Models\OrdenCompra\RequisicionOCDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutPutDTO.cs" />
@@ -4020,6 +4022,7 @@
     <Content Include="Views\OrdenCompra\OrdenCompraAutorizacion.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RequisicionProductoRevisionDTO.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\RequisicionProductoAutorizacionDTO.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\ProductoOCDTO.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
